--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -137,7 +137,7 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  #storageClass: jenkins-pv
+  storageClass: longhorn
   ## Persistent Volume Claim annotations
   ##
   annotations:
